--- a/authorizer-app/src/index.html
+++ b/authorizer-app/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>AuthorizerApp</title>
-  <base href="/">
+  <base href="/rest-sources/authorizer/">
 
   <meta name="viewport" content="width=deviceUser-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
